cmake_minimum_required(VERSION 3.10)

project(shm
LANGUAGES C
VERSION 1.0
)

set(CMAKE_C_STANDART 11)
set(CMAKE_C_STANDART_REQUIRED TRUE)

add_executable(${PROJECT_NAME} main2.c)

target_link_libraries(${PROJECT_NAME} rt)

install(TARGETS ${PROJECT_NAME}
COMPONENT program
RUNTIME DESTINATION "/home"
LIBRARY DESTINATION "/home"
DESTINATION "/home"
)

SET(CPACK_GENERATOR "DEB")
SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "AM") #required
INCLUDE(CPack)
